# pyweb

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/concepts/: requests.md  responses.md  routing.md  server.md  templates.md
examples/: hello_server.py
src/pyweb/: __init__.py  cli.py  errors.py  request.py  response.py  router.py  server.py  static.py  template.py
tests/: __init__.py  test_request.py  test_response.py  test_router.py  test_server.py  test_static.py  test_template.py
