[project]
name = "pyweb"
dynamic = ["version"]
description = "An educational HTTP web server built from scratch in Python"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    { name = "Rob Cox" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
keywords = ["http", "web-server", "education", "learning"]
dependencies = []

[project.urls]
Homepage = "https://github.com/robcox2910/pyweb"
Repository = "https://github.com/robcox2910/pyweb"
Issues = "https://github.com/robcox2910/pyweb/issues"
Documentation = "https://robcox2910.github.io/pyweb/"

[project.scripts]
pyweb = "pyweb.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.3",
    "pre-commit>=4.0.1",
    "pyright>=1.1.400",
    "commitizen>=4.4.0",
    "pip-audit>=2.10.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pyweb/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyweb"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]
exclude = ["src/pyweb/_version.py"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "C90", "PTH", "SIM",
    "TID", "S", "PERF", "FURB", "PIE", "T10", "T20", "ERA", "PL",
    "RET", "ARG", "FBT", "DTZ", "ICN", "PT", "D", "RUF", "A", "BLE",
    "EM", "FLY", "ISC", "PGH", "RSE", "SLF", "TRY",
]
ignore = [
    "E501", "D203", "D213", "ISC001", "TRY003",
    "PIE807", "PLW0108", "FBT001", "FBT003",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 9

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "SLF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src/pyweb",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*", "*/_version.py"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]
reportPrivateUsage = false

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
